--- a/css/main.css
+++ b/css/main.css
@@ -1359,7 +1359,7 @@ input::-moz-focus-inner {
   padding: 3.6rem 3rem 3.6rem 3.6rem;
   height: 100%;
   width: 280px;
-  background: #0c0c0c;
+  background:  rgb(124, 169, 206);
   color: rgba(255, 255, 255, 0.25);
   overflow-y: auto;
   overflow-x: hidden;
@@ -1386,20 +1386,20 @@ input::-moz-focus-inner {
 }
 .header-nav h3 {
   font-family: "metropolis-semibold", sans-serif;
-  font-size: 11px;
+  font-size: 15px;
   line-height: 1.363;
   text-transform: uppercase;
   letter-spacing: 0.25rem;
   margin-bottom: 4.8rem;
   margin-top: 0.9rem;
-  color: #cc147f;
+  color: #f3eff1;
 }
 .header-nav p {
   margin-bottom: 2.7rem;
 }
 
 .header-nav__content {
-  background: #0c0c0c;
+  background:rgb(124, 169, 206);
   position: relative;
   left: 50px;
   opacity: 0;
@@ -1408,7 +1408,7 @@ input::-moz-focus-inner {
 
 .header-nav__list {
   font-family: "metropolis-regular", sans-serif;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   margin: 3.6rem 0 3rem 0;
   padding: 0 0 1.8rem 0;
   list-style: none;
