--- a/css/main.css
+++ b/css/main.css
@@ -517,8 +517,9 @@ form,
   display: none;
 }
 
+/*Carga de barra en chome*/
 .pace .pace-progress {
-  background: #cc147f;
+  background: #070abb;
   position: fixed;
   z-index: 900;
   top: 0;
@@ -565,11 +566,11 @@ form,
 }
 
 #loader:before {
-  content: "";
+  content: " ";
   border-top: 6px solid rgba(255, 255, 255, 0.1);
   border-right: 6px solid rgba(255, 255, 255, 0.1);
-  border-bottom: 6px solid rgba(255, 255, 255, 0.1);
-  border-left: 6px solid #cc147f;
+  border-bottom: 6px solid rgba(233, 232, 232, 0.1);
+  border-left: 6px solid #070abb;
   -webkit-animation: load 1.1s infinite linear;
   animation: load 1.1s infinite linear;
   display: block;
@@ -1441,7 +1442,7 @@ input::-moz-focus-inner {
   top: 0;
 }
 .header-nav__list a:hover::before {
-  color: #cc147f;
+  color: #24c8ce;
 }
 
 .header-nav__social {
@@ -1566,7 +1567,7 @@ input::-moz-focus-inner {
 .header-menu-toggle:hover,
 .header-menu-toggle:focus,
 .header-menu-toggle:active {
-  color: #cc147f;
+  color: #091e61;
 }
 
 .header-menu-icon {
@@ -1783,7 +1784,7 @@ input::-moz-focus-inner {
   display: block;
   height: 6px;
   width: 6px;
-  background-color: #cc147f;
+  background-color: #4772c2;
   border-radius: 50%;
   position: absolute;
   top: 3rem;
