--- a/css/main.css
+++ b/css/main.css
@@ -1220,14 +1220,14 @@ input::-moz-focus-inner {
 
 
 /* ------------------------------------------------------------------- 
- * ## display headings
+ * ## display headings  colores y modificaciones de productos
  * ------------------------------------------------------------------- */
 .display-1 {
   font-family: "domine-bold", sans-serif;
   font-size: 6rem;
   line-height: 1.3;
   letter-spacing: 0;
-  color: #000000;
+  color: #055f14;
   letter-spacing: -0.03rem;
   margin-top: 0;
   margin-bottom: 4.8rem;
@@ -1242,7 +1242,7 @@ input::-moz-focus-inner {
   line-height: 1.3125;
   text-transform: uppercase;
   letter-spacing: 0.25rem;
-  color: #cc147f;
+  color: #1479cc;
   margin-top: 0;
   margin-bottom: 2.1rem;
 }
