--- a/css/main.css
+++ b/css/main.css
@@ -1374,11 +1374,8 @@ input::-moz-focus-inner {
   -ms-transform: translateX(100%);
   transform: translateX(100%);
   visibility: hidden;
-
-  background: #56ab2f;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #a8e063, #56ab2f);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #a8e063, #56ab2f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
+  background: #539c30;  /* fallback for old browsers */  
+  border-radius: 2%;
 
 }
 .header-nav a,
@@ -1410,10 +1407,7 @@ input::-moz-focus-inner {
   opacity: 0;
   visibility: hidden;
   border-color: transparent;
-  background: #56ab2f;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #a8e063, #56ab2f);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #a8e063, #56ab2f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
+  background: #539c30; 
 
 }
 
@@ -1688,10 +1682,11 @@ input::-moz-focus-inner {
   height: 100%;
   min-height: 786px;
   background-color: transparent;
-  opacity: 0.3;
+  opacity: 0.2;
   position: relative;
   display: table;
 }
+/*pantalla frontal*/
 .s-home .shadow-overlay {
   position: absolute;
   top: 0;
@@ -1781,16 +1776,20 @@ input::-moz-focus-inner {
   position: absolute;
   top: 50%;
   right: 0;
+  color: #000;
 }
+/*menu lateral*/
 .home-sidelinks li {
   display: block;
+  border-color: #000;
   padding: 0;
   text-align: left;
-  background-color: black;
+  background-color: rgb(12, 12, 12);
   border-top: 1px solid rgba(24, 172, 218, 0.616);
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   position: relative;
+  color: #000;
 }
 .home-sidelinks li:last-child {
   border-bottom: 1px solid rgba(238, 7, 7, 0.829);
@@ -1930,7 +1929,7 @@ input::-moz-focus-inner {
 /* animate .home-content__main
  * ------------------------------------------------------------------- */
 html.cl-preload .home-content__main {
-  opacity: 0;
+  opacity: 1.6;
 }
 
 html.cl-loaded .home-content__main {
@@ -2991,6 +2990,13 @@ background: linear-gradient(to right, #061700, #52c234); /* W3C, IE 10+/ Edge, F
 }
 
 
+@media only screen and (max-width: 400px) {
+  .stats__count {
+    font-size: 2.3rem;
+  }
+}
+
+
 
 /* ===================================================================
  * # contact 
@@ -2998,10 +3004,14 @@ background: linear-gradient(to right, #061700, #52c234); /* W3C, IE 10+/ Edge, F
  * ------------------------------------------------------------------- */
 .s-contact {
   padding-bottom: 10.2rem;
-  background-color: #0725ce;
   color: rgba(255, 255, 255, 0.3);
   position: relative;
   height: 90%;
+ /*Estacion disponible contacto*/
+  background: #52c234;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #061700, #52c234);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #061700, #52c234); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 .s-contact a {
   color: #ffffff;
