--- a/css/main.css
+++ b/css/main.css
@@ -1389,7 +1389,7 @@ input::-moz-focus-inner {
 }
 .header-nav h3 {
   font-family: "metropolis-semibold", sans-serif;
-  font-size: 17px;
+  font-size: 19px;
   line-height: 1.363;
   text-transform: uppercase;
   letter-spacing: 0.25rem;
@@ -1410,10 +1410,10 @@ input::-moz-focus-inner {
   background: #539c30; 
 
 }
-
+/*tamaño de letra de meunu*/
 .header-nav__list {
   font-family: "metropolis-regular", sans-serif;
-  font-size: 2.0rem;
+  font-size: 2.2rem;
   margin: 3.6rem 0 3rem 0;
   padding: 0 0 1.8rem 0;
   list-style: none;
@@ -2224,6 +2224,13 @@ html.no-csstransitions .home-content__main {
   }
 }
 
+
+@media only screen and (max-width: 400px) {
+  .s-home .target-section{
+      width: 100%;
+      height: 100%;
+  }
+}
 
 
 /* ===================================================================
