--- a/css/main.css
+++ b/css/main.css
@@ -519,7 +519,7 @@ form,
 
 /*Carga de barra en chome*/
 .pace .pace-progress {
-  background: #070abb;
+  background: #4d8831; 
   position: fixed;
   z-index: 900;
   top: 0;
@@ -544,10 +544,11 @@ form,
   left: 0;
   right: 0;
   bottom: 0;
-  background: #050505;
+  background: #d6d2d2;
   z-index: 800;
   height: 100%;
   width: 100%;
+  position: absolute;
 }
 
 .no-js #preloader,
@@ -559,24 +560,37 @@ form,
   position: absolute;
   left: 50%;
   top: 50%;
-  width: 60px;
-  height: 60px;
+  width: 65px;
+  height: 65px;
   margin: -30px 0 0 -30px;
   padding: 0;
+  border-color: #000;
+  width: 100%;
+  height: 100%;
 }
 
+#loader .textos{
+   font-size: 100%;
+   color: rgb(20, 102, 38);
+   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+/*tiempo de carga de loader*/
 #loader:before {
   content: " ";
   border-top: 6px solid rgba(255, 255, 255, 0.1);
   border-right: 6px solid rgba(255, 255, 255, 0.1);
-  border-bottom: 6px solid rgba(233, 232, 232, 0.1);
-  border-left: 6px solid #070abb;
-  -webkit-animation: load 1.1s infinite linear;
-  animation: load 1.1s infinite linear;
+  border-bottom: 6px solid rgba(255, 255, 255, 0.1);
+  border-left: 6px solid  #3c801c; 
+  -webkit-animation: load 2.1s infinite linear;
+  animation: load 2.1s infinite linear;
+  color: black;
   display: block;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
+  border-radius: 80%;
+  width: 72px;
+  height: 72px;
+  
 }
 
 @-webkit-keyframes load {
@@ -1429,7 +1443,6 @@ input::-moz-focus-inner {
 }
 .header-nav__list a {
   display: block;
-  color:  rgba(124, 243, 12, 0.925);
   position: relative;
   padding-left: 3.5rem;
 }
@@ -2240,7 +2253,7 @@ html.no-csstransitions .home-content__main {
 .s-about {
   padding-top: 18rem;
   padding-bottom: 18rem;
-  background-color: #ffffff;
+  background-color: aliceblue;
   position: relative;
 }
 
