--- a/css/main.css
+++ b/css/main.css
@@ -1690,14 +1690,16 @@ input::-moz-focus-inner {
  * # home pantalla inical 
  *
  * ------------------------------------------------------------------- */
+ 
+
 .s-home {
   width: 100%;
   height: 100%;
   min-height: 786px;
   background-color: transparent;
-  opacity: 0.2;
-  position: relative;
-  display: table;
+  opacity: 0.1;
+  /*position: relative;
+*/  display: table;
 }
 /*pantalla frontal*/
 .s-home .shadow-overlay {
