--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ html {
   }
 }
 
+
 html, body {
   height: 100%;
 }
@@ -519,7 +520,7 @@ form,
 
 /*Carga de barra en chome*/
 .pace .pace-progress {
-  background: #4d8831; 
+  background: #333dc9;
   position: fixed;
   z-index: 900;
   top: 0;
@@ -544,7 +545,7 @@ form,
   left: 0;
   right: 0;
   bottom: 0;
-  background: #d6d2d2;
+  background: #b80a6fce;
   z-index: 800;
   height: 100%;
   width: 100%;
@@ -571,8 +572,23 @@ form,
 
 #loader .textos{
    font-size: 100%;
-   color: rgb(20, 102, 38);
+   color: rgb(229, 238, 231);
    font-family: Arial, Helvetica, sans-serif;
+}
+
+@media only screen and (min-width: 400px){
+#loader .textos{
+  font-size: 100%;
+  color: rgb(229, 238, 231);
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+#loader .iconoloader{
+  width: '10%';
+  vertical-align: center;
+}
+
+
 }
 
 
@@ -582,7 +598,7 @@ form,
   border-top: 6px solid rgba(255, 255, 255, 0.1);
   border-right: 6px solid rgba(255, 255, 255, 0.1);
   border-bottom: 6px solid rgba(255, 255, 255, 0.1);
-  border-left: 6px solid  #3c801c; 
+  border-left: 6px solid  #333dc9; 
   -webkit-animation: load 2.1s infinite linear;
   animation: load 2.1s infinite linear;
   color: black;
@@ -1238,7 +1254,7 @@ input::-moz-focus-inner {
  * ------------------------------------------------------------------- */
 .display-1 {
   font-family: "domine-bold", sans-serif;
-  font-size: 6rem;
+  font-size: 3rem;
   line-height: 1.3;
   letter-spacing: 0;
   color: #055f14;
@@ -1567,7 +1583,7 @@ input::-moz-focus-inner {
 .header-menu-toggle::before {
   display: inline-block;
   content: "Menu";
-  height: 45px;
+  height: 46px;
   left: auto;
   text-align: right;
   padding-left: 15px;
@@ -1576,7 +1592,7 @@ input::-moz-focus-inner {
   position: absolute;
   top: 0;
   right: 100%;
-  color: #0a1ecc;
+  color: #f3f3f5;
 }
 .header-menu-toggle.opaque {
   background-color: #12a7ec;
@@ -2253,7 +2269,7 @@ html.no-csstransitions .home-content__main {
  *
  * ------------------------------------------------------------------- */
 .s-about {
-  padding-top: 18rem;
+  padding-top: 5rem;
   padding-bottom: 18rem;
   background-color: aliceblue;
   position: relative;
@@ -2349,7 +2365,7 @@ html.no-csstransitions .home-content__main {
 }
 @media only screen and (max-width: 800px) {
   .s-about {
-    padding-top: 12rem;
+    padding-top: 3rem;
     padding-bottom: 12rem;
   }
 
@@ -2380,7 +2396,7 @@ html.no-csstransitions .home-content__main {
 }
 @media only screen and (max-width: 400px) {
   .s-about {
-    padding-top: 9.6rem;
+    padding-top: 3rem;
   }
 
   .process h4 {
@@ -2414,7 +2430,7 @@ html.no-csstransitions .home-content__main {
  *
  * ------------------------------------------------------------------- */
 .s-services {
-  padding-top: 18rem;
+  padding-top: 5rem;
   padding-bottom: 18rem;
   color: #555555;
   position: relative;
@@ -2459,7 +2475,7 @@ html.no-csstransitions .home-content__main {
 }
 @media only screen and (max-width: 800px) {
   .s-services {
-    padding-top: 12rem;
+    padding-top: 3rem;
     padding-bottom: 12rem;
   }
 
@@ -2480,7 +2496,7 @@ html.no-csstransitions .home-content__main {
 }
 @media only screen and (max-width: 400px) {
   .s-services {
-    padding-top: 9.6rem;
+    padding-top: 2rem;
   }
 
   .services-list [class*="col-"]:nth-child(n) {
@@ -2496,7 +2512,7 @@ html.no-csstransitions .home-content__main {
  * ------------------------------------------------------------------- */
 .s-works {
   background: #ffffff;
-  padding: 18rem 0 24rem;
+  padding: 5rem 0 24rem;
   position: relative;
 }
 
@@ -2730,7 +2746,7 @@ html.no-csstransitions .home-content__main {
 }
 @media only screen and (max-width: 800px) {
   .s-works {
-    padding: 12rem 0 21rem;
+    padding: 3rem 0 21rem;
   }
 
   .masonry-wrap {
@@ -2745,7 +2761,7 @@ html.no-csstransitions .home-content__main {
 }
 @media only screen and (max-width: 400px) {
   .s-works {
-    padding: 9.6rem 0 21rem;
+    padding: 3rem 0 3rem;
   }
 
   .masonry-wrap {
@@ -2896,7 +2912,7 @@ html.no-csstransitions .home-content__main {
   }
 
   .testimonials__slide {
-    padding: 13.2rem 0 0;
+    padding: 3.2rem 0 0;
     text-align: center;
   }
   .testimonials__slide::before {
@@ -2992,7 +3008,7 @@ background: linear-gradient(to right, #061700, #52c234); /* W3C, IE 10+/ Edge, F
     margin: 3rem 0;
   }
   .stats__count {
-    font-size: 9rem;
+    font-size: 4rem;
   }
 }
 @media only screen and (max-width: 600px) {
@@ -3277,9 +3293,9 @@ background: linear-gradient(to right, #061700, #52c234); /* W3C, IE 10+/ Edge, F
 }
 @media only screen and (max-width: 1200px) {
   .s-contact {
-    padding-top: 15rem;
+    padding-top: 1rem;
   }
-
+   
   .contact-main {
     margin-top: 13.2rem;
   }
@@ -3323,7 +3339,7 @@ background: linear-gradient(to right, #061700, #52c234); /* W3C, IE 10+/ Edge, F
 }
 @media only screen and (max-width: 800px) {
   .s-contact {
-    padding-top: 12rem;
+    padding-top: 2rem;
     padding-bottom: 9rem;
   }
 
@@ -3419,7 +3435,7 @@ background: linear-gradient(to right, #061700, #52c234); /* W3C, IE 10+/ Edge, F
 }
 @media only screen and (max-width: 400px) {
   .s-contact {
-    padding-top: 9.6rem;
+    padding-top: 1rem;
     padding-bottom: 3rem;
   }
 
