--- a/css/micons/micons.css
+++ b/css/micons/micons.css
@@ -286,7 +286,7 @@
     content: "\e956";
 }
 .icon-group:before {
-    content: "\e957";
+    content: "\e95f";   
 }
 .icon-headset:before {
     content: "\e958";
