--- a/css/main.css
+++ b/css/main.css
@@ -73,11 +73,11 @@ html, body {
 body {
   background: #111111;
   font-family: "metropolis-regular", sans-serif;
-  font-size: 1.7rem;
+  font-size: 0.7rem;
   font-style: normal;
   font-weight: normal;
   line-height: 1.765;
-  color: #555555;
+  color: #fcf7f7;
   margin: 0;
   padding: 0;
 }
@@ -201,11 +201,35 @@ p.lead {
   p.lead {
     font-size: 2.1rem;
   }
+  
 }
 @media only screen and (max-width: 800px) {
   p.lead {
     font-size: 1.9rem;
   }
+  img.imagent{
+     width: 30%;
+     height: 30%;
+  }
+  img.imgc{
+    width: 18%;
+     height: 37%;
+  }
+  img.hometelefonos{
+    width: 100%;
+    height: 90%;
+  }
+  .preloader.contedorloader{
+    width: 10%;
+    height: 20%;
+  }
+  img.iconoloader{
+    width: 20%;
+    height: 10%;
+  }
+  /*
+  //para telefono */
+
 }
 
 em, i, strong, b {
@@ -545,7 +569,7 @@ form,
   left: 0;
   right: 0;
   bottom: 0;
-  background: #b80a6fce;
+  background: #45a5ddce;
   z-index: 800;
   height: 100%;
   width: 100%;
@@ -597,7 +621,7 @@ form,
   border-top: 6px solid rgba(255, 255, 255, 0.1);
   border-right: 6px solid rgba(255, 255, 255, 0.1);
   border-bottom: 6px solid rgba(255, 255, 255, 0.1);
-  border-left: 6px solid  #333dc9; 
+  border-left: 6px solid  #f1f1f3; 
   -webkit-animation: load 2.1s infinite linear;
   animation: load 2.1s infinite linear;
   color: black;
@@ -1403,7 +1427,7 @@ input::-moz-focus-inner {
   -ms-transform: translateX(100%);
   transform: translateX(100%);
   visibility: hidden;
-  background: #539c30;  /* fallback for old browsers */  
+  background: #1d6ca0;  /* fallback for old browsers */  
   border-radius: 2%;
 
 }
@@ -1436,7 +1460,7 @@ input::-moz-focus-inner {
   opacity: 0;
   visibility: hidden;
   border-color: transparent;
-  background: #539c30; 
+  background: #1d6ca0; 
 
 }
 /*tamaño de letra de meunu*/
@@ -1868,7 +1892,7 @@ input::-moz-focus-inner {
   display: inline-block;
   font-family: "metropolis-semibold", sans-serif;
   font-size: 11px;
-  line-height: 4.8rem;
+  line-height: 95.8rem;
   text-transform: uppercase;
   letter-spacing: 0.3rem;
   color: #ffffff;
@@ -1891,7 +1915,7 @@ input::-moz-focus-inner {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   position: absolute;
-  top: 0;
+  top: 450px;
   right: 0;
 }
 .home-scroll:hover .home-scroll__text {
@@ -2268,10 +2292,14 @@ html.no-csstransitions .home-content__main {
  *
  * ------------------------------------------------------------------- */
 .s-about {
-  padding-top: 5rem;
-  padding-bottom: 18rem;
-  background-color: aliceblue;
+  padding-top: 3rem;
+  padding-bottom: 8rem;
   position: relative;
+  /*pantalla de fondo*/
+  background: #3291b1;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #fff, #51a3be);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #fff, #79adbe); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
 }
 
 
@@ -2337,8 +2365,8 @@ html.no-csstransitions .home-content__main {
  * ------------------------------------------------------------------- */
 @media only screen and (max-width: 1200px) {
   .s-about {
-    padding-top: 15rem;
-    padding-bottom: 15rem;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
   }
 
   .process__vline-left {
@@ -2364,8 +2392,8 @@ html.no-csstransitions .home-content__main {
 }
 @media only screen and (max-width: 800px) {
   .s-about {
-    padding-top: 3rem;
-    padding-bottom: 5rem;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
   }
 
   .process {
@@ -2395,7 +2423,7 @@ html.no-csstransitions .home-content__main {
 }
 @media only screen and (max-width: 400px) {
   .s-about {
-    padding-top: 3rem;
+    padding-top: 1rem;
   }
 
   .process h4 {
@@ -2430,7 +2458,7 @@ html.no-csstransitions .home-content__main {
  * ------------------------------------------------------------------- */
 .s-services {
   padding-top: 5rem;
-  padding-bottom: 18rem;
+  padding-bottom: 1rem;
   color: #555555;
   position: relative;
 }
@@ -2461,8 +2489,8 @@ html.no-csstransitions .home-content__main {
  * ------------------------------------------------------------------- */
 @media only screen and (max-width: 1200px) {
   .s-services {
-    padding-top: 15rem;
-    padding-bottom: 15rem;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
   }
 
   .services-list [class*="col-"]:nth-child(2n + 1) {
@@ -2475,7 +2503,7 @@ html.no-csstransitions .home-content__main {
 @media only screen and (max-width: 800px) {
   .s-services {
     padding-top: 3rem;
-    padding-bottom: 12rem;
+    padding-bottom: 1rem;
   }
 
   .services-list {
@@ -2729,7 +2757,7 @@ html.no-csstransitions .home-content__main {
 }
 @media only screen and (max-width: 1200px) {
   .s-works {
-    padding: 15rem 0 12rem;
+    padding: 3rem 0 12rem;
   }
 }
 @media only screen and (max-width: 1100px) {
@@ -2745,7 +2773,7 @@ html.no-csstransitions .home-content__main {
 }
 @media only screen and (max-width: 800px) {
   .s-works {
-    padding: 3rem 0 21rem;
+    padding: 3rem 0 9rem;
   }
 
   .masonry-wrap {
@@ -3012,12 +3040,12 @@ background: linear-gradient(to right, #061700, #52c234); /* W3C, IE 10+/ Edge, F
 }
 @media only screen and (max-width: 600px) {
   .stats__count {
-    font-size: 8.4rem;
+    font-size: 5.4rem;
   }
 }
 @media only screen and (max-width: 400px) {
   .s-stats {
-    padding-top: 4.5rem;
+    padding-top: 0.5rem;
     padding-bottom: 4.5rem;
   }
 
