--- a/css/main.css
+++ b/css/main.css
@@ -207,10 +207,10 @@ p.lead {
   p.lead {
     font-size: 1.9rem;
   }
-  img.imagent{
+  /* img.imagent{
      width: 30%;
      height: 30%;
-  }
+  } */
   img.imgc{
     width: 18%;
      height: 37%;
@@ -595,14 +595,14 @@ form,
 }
 
 #loader .textos{
-   font-size: 100%;
+   font-size: 15px;
    color: rgb(229, 238, 231);
    font-family: Arial, Helvetica, sans-serif;
 }
 
 @media only screen and (min-width: 400px){
 #loader .textos{
-  font-size: 100%;
+  font-size: 35px;
   color: rgb(229, 238, 231);
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -2502,7 +2502,7 @@ html.no-csstransitions .home-content__main {
 }
 @media only screen and (max-width: 800px) {
   .s-services {
-    padding-top: 3rem;
+    padding-top: 1rem;
     padding-bottom: 1rem;
   }
 
@@ -2788,7 +2788,7 @@ html.no-csstransitions .home-content__main {
 }
 @media only screen and (max-width: 400px) {
   .s-works {
-    padding: 3rem 0 12rem;
+    padding: 0rem 0 12rem;
   }
 
   .masonry-wrap {
