--- a/css/main.css
+++ b/css/main.css
@@ -1291,7 +1291,7 @@ input::-moz-focus-inner {
 
 .subhead {
   font-family: "metropolis-semibold", sans-serif;
-  font-size: 1.6rem;
+  font-size: 3.6rem;
   line-height: 1.3125;
   text-transform: uppercase;
   letter-spacing: 0.25rem;
@@ -1300,7 +1300,7 @@ input::-moz-focus-inner {
   margin-bottom: 2.1rem;
 }
 .subhead::before {
-  content: "/ ";
+  content: " ";
 }
 
 /* ------------------------------------------------------------------- 
